# metanet-desktop

./: .gitignore  README.md  TODO.md  index.html  package-lock.json  package.json  tauri.conf.json  test.tsx  tsconfig.json  update-version.js  vite.config.ts
.github/.workflows/: release.yml
.github/workflows/: deploy-docs.yml  release.yml
bash/: add-greeter-screen-to-shared.sh  bootstrap-mdw.sh  bootstrap-mdw1.sh  catdir.sh  cleanup-mobile-folders.sh  create-tsconfig-base.sh  fix-app-import.sh  fix-mobile-manifest.sh  fix-module-resolution.sh  fix-ndk.sh  fix-ndk1.sh  link-shared-to-mobile.sh  move-components-to-shared.sh  move-constants-to-shared.sh  move-contexts-to-shared.sh  move-contexts.sh  move-greeter-to-shared.sh  move-hooks-to-shared.sh  move-utils-to-shared.sh  restart-expo-and-log.sh  rewire-mobile-to-shared.sh  rewire-remaining-mobile-imports.sh  set-port-8083.sh  setup-shared.sh  update-imports-in-project.sh  update-tsconfigs.sh
docs/: CNAME  index.html
mdw-mobile/: App.tsx  app.json  babel.config.js  metro.config.js  package-lock.json  package.json  packageORG.json  tsconfig.json
mdw-mobile/android/: build.gradle  gradle.properties  settings.gradle
mdw-mobile/app/: +not-found.tsx  _layout.tsx  greeter.tsx  modal.tsx
mobile/: android_logs.txt  app.json  babel.config.js  metro.config.js  package-lock.json  package.json  tsconfig.json  webEntry.js
mobile/.expo/: devices.json
mobile/android/: build.gradle  settings.gradle
mobile/app/: _app.tsx  _app.tsx.bak  _layout.tsx  index.tsx  recovery.tsx
mobile/ios/: Podfile
mobile/src/: PhoneEntryWebView.tsx  PhoneEntryWrapper.tsx
shared/: package-lock.json  package.json
shared/components/: EditScreenInfo.tsx  Themed.tsx  WalletConfig.tsx
shared/contexts/: UserContext.transpiled.js  UserContext.transpiled.txt  UserContext.tsx  WalletContext.tsx
src/: ErrorBoundary.tsx  ThemeWrapper.tsx  UserContext.tsx  UserInterface.tsx  WalletBridge.tsx  WalletContext.tsx  config.ts  echoTS.ts  main.tsx  onWalletReady.ts  tauriFunctions.ts  types.d.ts  walletBridgeAsyncListen.tsx
src-old/: UserInterface.jsx
src-old/components/: AccessAtAGlance.jsx  CodeHandler.jsx  KernelConfigurator.jsx  Profile.jsx  (+9 more)
src-tauri/: Cargo.toml  metanet-desktop.appdata.xml  metanet-desktop.desktop  org.bsvblockchain.metanetdesktop.metainfo.xml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
srcORG/: WalletContext.tsx  config.ts  main.tsx
(+229 files in other folders)
